--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <script src="js/Enemy.js"></script> 
     <script src="js/engine-utilities.js"></script> 
     <script src="js/Engine.js"></script> 
+    <script src="js/bullet.js"></script>
+    <script src="js/powerup.js"></script>
+    <script src="js/satellite1.js"></script>
+    <script src="js/satellite2.js"></script>
     <script src="js/Player.js"></script> 
     <script src="js/main.js"></script> 
+    
 </body> 
 </html> 
