--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head> 
 <body>    
     <div id="app"></div> 
+    <div id="instructions">up to shoot!</div>
     <script src="js/data.js"></script> 
     <script src="js/Enemy.js"></script> 
     <script src="js/engine-utilities.js"></script> 
