--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/powerup.js"></script>
     <script src="js/satellite1.js"></script>
     <script src="js/satellite2.js"></script>
+    <script src="js/pointCounter.js"></script>
     <script src="js/Player.js"></script> 
     <script src="js/main.js"></script> 
     
